2002-02-26  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c: remove the unused on_url and link_clicked handlers
	and add note that these signals do not cascade.  Use
	gtk_html_get_base_relative in set_base now.

	* htmlframe.c: same as above.

	* gtkhtml.c: make link_clicked and on_url resolve urls relative to
	the frame they are in.  moved the relative url code in here.
	gtk_html_get_base_relative and gtk_html_get_object_relative
	function for the relative url parsing.  These should probably get
	better names.

	* gtkhtml.h: add the new function prototypes.

2002-02-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (use_pictograms): set ALT text
	to picto image
	(html_engine_insert_text): don't use smiley's in plain text mode

	* htmlimage.c (calc_size): draw ALT text with PLAIN painter
	(calc_size): update for ALT text and PLAIN painter

	* htmlengine-edit-cursor.c (html_engine_draw_image_cursor): fixed
	rectangle calculation

2002-02-24  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (html_engine_url_requested_cb): expand urls relative
	to the document url.

	* htmlframe.c (html_frame_init): request the initial url on the
	parent.
	(html_frame_url_requested): let the widget expand the relative
	urls.

	* htmliframe.c (html_frame_init): request the initial url on the
	parent.
	(html_iframe_url_requested): let the widget expand the relative
	urls.

2002-02-23  Larry Ewing  <lewing@ximian.com>

	* htmlframe.c: change relative url lookup.

	* htmliframe.c: change relative url handling.  Fix check_url logic
	for scrolled case.

	* gtkhtml.c (gtk_html_set_base): remove the old parsing logic.

2002-02-22  Radek Doulik  <rodo@ximian.com>

	* htmlimage.c (update_or_redraw): don't draw or schedule engine
	update in blocking mode

2002-02-15  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (new_obj_from_uri): don't remove http:// from link text
	(new_obj_from_uri): don't be too smart about URL's, people don't
	like ;-)