@@ -58,7 +58,7 @@ frame_set_base (GtkHTML *html, const gchar *url, gpointer data)
 {
 	char *new_url = NULL;
 
-	new_url = gtk_html_get_base_relative (html, url);
+	new_url = gtk_html_get_url_base_relative (html, url);
 	gtk_html_set_base (html, new_url);
 	g_free (new_url);
 }
